# RNN

./: Cargo.toml  GPU_README.md  IMPLEMENTATION_SUMMARY.md  LAYER_GUIDE.md  README.md
.cargo/: config.toml
examples/: basic_usage.rs  cifar-10_gpu.rs  cpu_stress_test.rs  cpu_utilization_demo.rs  device_selection.rs  gpu_example.rs  gpu_infrastructure_test.rs  gpu_utilization.rs  main.rs  minimal_gpu_demo.rs  mnist.rs  mnist_cnn.rs  mnist_dense.rs  mnist_gpu.rs  mnist_small.rs  mnist_small_gpu.rs  mnist_training.rs  real_gpu_compute.rs  real_gpu_neural_network.rs  simple_cnn.rs  simple_cnn_gpu.rs  simple_demo.rs  simple_gpu_demo.rs  simple_xor.rs  test_conv2d.rs  test_conv2d_gpu.rs  test_weights.rs  test_weights_gpu.rs  xor.rs  xor_cpu.rs  xor_example.rs  xor_gpu.rs  xor_gpu_sgd_test.rs
examples/data/: README.md
src/: activation.rs  activations.rs  error.rs  gpu.rs  io.rs  layer.rs  lib.rs  loss.rs  losses.rs  network.rs  optimizer.rs  optimizers.rs  training.rs  utils.rs
src/device/: cpu.rs  cuda.rs  gpu.rs  mod.rs
src/gpu/: gpu_layers.rs  kernels.rs  real_compute.rs
src/layers/: conv.rs  dense.rs  dropout.rs  mod.rs  normalization.rs  pooling.rs
src/network/: builder.rs  mod.rs  training.rs
src/tensor/: mod.rs  ops.rs  view.rs
